2005-06-30  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Configuration Headers): Change the explanation
	about #include <config.h>.

2005-06-30  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/status.m4: Fix the order of the "sections", so that it
	matches the order of execution.  No code changed.

2005-06-30  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/status.m4 (_AC_OUTPUT_CONFIG_STATUS): Use a here
	document to output the default config_* lists to config.status.
	Don't recognize option --file, if the functionality is not there.
	Likewise for --header; moreover, recognize --he and --h as shortcuts
	for --help in that case.

2005-06-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de> 

	* lib/autoconf/fortran.m4 (_AC_PROG_FC_V_OUTPUT): Fix also for
	single-quoted -cmdline argument in Portland Group compiler.
	Reported against LAM by Ole Holm Nielsen <Ole.H.Nielsen@fysik.dtu.dk>.

2005-06-30  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Generic Functions): Mention the Gnulib project.
	(Limitations of Usual Tools) <sed>: Another minor rephrasing.

2005-06-30  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/autom4te.in (Automake-preselections): Preselect AC_SUBST_TRACE.

2005-06-29  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (File Descriptors): ksh doesn't pass open file
	descriptors to child processes; reported by Norman Gray.

2005-06-29  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (AC_SUBST_TRACE): New macro, to be traced
	instead of AC_SUBST; proposed by Alexandre Duret-Lutz.
	(AC_SUBST): Call it.
	* lib/autoconf/status.m4 (_AC_OUTPUT_FILES): Call AC_SUBST_TRACE for
	the directory specific variables; but don't call it for configure_input.

2005-06-29  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (AC_ARG_VAR): Move next to _AC_ARG_PRECIOUS.

2005-06-28  Derek Price  <derek@ximbiot.com>

	* doc/autoconf.texi (Limitations of Usual Tools) <sed>: Reword recent
	addition.

2005-06-23  Paul Eggert  <eggert@cs.ucla.edu>
