@@ -1,9 +1,5 @@
 * Major changes in Autoconf 2.59c
 
-** The configure command now diagnoses attempts to use a working or source
-  directory whose name contains a special character like space, newline, or "\".
-  Such names are not supported, and can cause "configure" to crash.
-
 ** The configure command now redirects standard input from /dev/null,
   to help avoid problems with subsidiary commands that might mistakenly
   read standard input.  AS_ORIGINAL_STDIN_FD points to the original
